[gd_scene load_steps=8 format=3 uid="uid://bdthtuqr5siaw"]

[ext_resource type="Texture2D" uid="uid://c321p13de1wib" path="res://sprites/money1.jpg" id="1_lgnak"]
[ext_resource type="Script" uid="uid://27h23lbf70h0" path="res://scripts/notas_rand.gd" id="1_pfvfw"]
[ext_resource type="Texture2D" uid="uid://d1ra6be0c3gk5" path="res://sprites/money2.jpg" id="2_pfvfw"]
[ext_resource type="Texture2D" uid="uid://c0ubvrrxfc4rp" path="res://sprites/money3.jpeg" id="3_7twib"]

[sub_resource type="Animation" id="Animation_pfvfw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -295)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Node2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_lgnak"]
resource_name = "girando"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.96667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -295), Vector2(20, 912)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Node2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 4.96667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7twib"]
_data = {
&"RESET": SubResource("Animation_pfvfw"),
&"girando": SubResource("Animation_lgnak")
}

[node name="Node2D" type="Node2D"]
script = ExtResource("1_pfvfw")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_7twib")
}
autoplay = "girando"

[node name="Node2D" type="Node2D" parent="."]
position = Vector2(0, -295)

[node name="Money1" type="Sprite2D" parent="Node2D"]
visible = false
position = Vector2(-2.5, -0.5)
scale = Vector2(0.0708583, 0.0656028)
texture = ExtResource("1_lgnak")

[node name="Money2" type="Sprite2D" parent="Node2D"]
visible = false
position = Vector2(-2, -0.999999)
scale = Vector2(0.0718563, 0.0638298)
texture = ExtResource("2_pfvfw")

[node name="Money3" type="Sprite2D" parent="Node2D"]
visible = false
position = Vector2(-2.00001, -1)
scale = Vector2(0.0369792, 0.0324074)
texture = ExtResource("3_7twib")
